--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css" type="text/text/css">
+    <link rel="stylesheet" href="puggam3er/puggam3er.github.io/style.css" type="text/text/css">
     <title>SonicScience</title>
   </head>
   <body>
