removed stylesheet link

--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="https://puggam3er.github.io/style.css" type="text/text/css">
     <title>SonicScience</title>
   </head>
   <body>
     <p>SonicScience</p>
     <button>PAPER 1</button>
   </body>
+
+  <style>
+  body {
+    color:red;
+  }
+
+  * {
+    background-color: blue;
+  }
+  </style>
 </html>
