--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </form>
     <br>
     <div id="box">
-    <button class="green">Biology Paper 1</button>
+    <button class="green" onclick="location.href='test.html'">Biology Paper 1</button>
     <button class="green">Biology Paper 2</button>
     <br>
     <br>
