--- a/b-1f-jun-18.html
+++ b/b-1f-jun-18.html
@@ -7,6 +7,94 @@
   <body>
     <h1>SonicScience - Biology</h1>
   <body>
+    Question 1
+    <a href="#" id="red">1.1</a>
+    <a href="#" id="red">1.2</a>
+    <a href="#" id="red">1.3</a>
+    <a href="#" id="red">1.4</a>
+    <a href="#" id="red">1.5</a>
+    <a href="#" id="red">1.6</a>
+    <a href="#" id="red">1.7</a>
+    <a href="#" id="red">1.8</a>
+    <br>
+    <br>
+    Question 2
+    <a href="#" id="orange">2.1</a>
+    <a href="#" id="orange">2.2</a>
+    <a href="#" id="orange">2.3</a>
+    <a href="#" id="orange">2.4</a>
+    <a href="#" id="orange">2.5</a>
+    <a href="#" id="orange">2.6</a>
+    <a href="#" id="orange">2.7</a>
+    <a href="#" id="orange">2.8</a>
+    <br>
+    <br>
+    Question 3
+    <a href="#" id="yellow">2.1</a>
+    <a href="#" id="yellow">2.2</a>
+    <a href="#" id="yellow">2.3</a>
+    <a href="#" id="yellow">2.4</a>
+    <a href="#" id="yellow">2.5</a>
+    <a href="#" id="yellow">2.6</a>
+    <a href="#" id="yellow">2.7</a>
+    <a href="#" id="yellow">2.8</a>
+    <br>
+    <br>
+    Question 4
+    <a href="#" id="lime">2.1</a>
+    <a href="#" id="lime">2.2</a>
+    <a href="#" id="lime">2.3</a>
+    <a href="#" id="lime">2.4</a>
+    <a href="#" id="lime">2.5</a>
+    <a href="#" id="lime">2.6</a>
+    <a href="#" id="lime">2.7</a>
+    <a href="#" id="lime">2.8</a>
+    <br>
+    <br>
+    Question 5
+    <a href="#" id="blue">2.1</a>
+    <a href="#" id="blue">2.2</a>
+    <a href="#" id="blue">2.3</a>
+    <a href="#" id="blue">2.4</a>
+    <a href="#" id="blue">2.5</a>
+    <a href="#" id="blue">2.6</a>
+    <a href="#" id="blue">2.7</a>
+    <a href="#" id="blue">2.8</a>
+    <br>
+    <br>
+    Question 6
+    <a href="#" id="navy">2.1</a>
+    <a href="#" id="navy">2.2</a>
+    <a href="#" id="navy">2.3</a>
+    <a href="#" id="navy">2.4</a>
+    <a href="#" id="navy">2.5</a>
+    <a href="#" id="navy">2.6</a>
+    <a href="#" id="navy">2.7</a>
+    <a href="#" id="navy">2.8</a>
+    <br>
+    <br>
+    Question 7
+    <a href="#" id="magenta">2.1</a>
+    <a href="#" id="magenta">2.2</a>
+    <a href="#" id="magenta">2.3</a>
+    <a href="#" id="magenta">2.4</a>
+    <a href="#" id="magenta">2.5</a>
+    <a href="#" id="magenta">2.6</a>
+    <a href="#" id="magenta">2.7</a>
+    <a href="#" id="magenta">2.8</a>
+    <a href="#" id="magenta">2.9</a>
+    <br>
+    <br>
+    Question 8
+    <a href="#" id="purple">2.1</a>
+    <a href="#" id="purple">2.2</a>
+    <a href="#" id="purple">2.3</a>
+    <a href="#" id="purple">2.4</a>
+    <a href="#" id="purple">2.5</a>
+    <a href="#" id="purple">2.6</a>
+    <a href="#" id="purple">2.7</a>
+    <br>
+    <br>
     <footer>Biology Foundation Paper 1 June 2018</footer>
   </body>
   <style>
@@ -30,12 +118,46 @@
     border-width: 10px;
   }
 
-  button{
+  a{
     border:none;
     text-decoration: none;
     padding:12.5px;
     color:white;
     text-align: center;
+    border-radius: 10px;
+    font-size:16px;
+  }
+
+  #red{
+    background-color: #b30000;
+  }
+
+  #orange{
+    background-color: #e65c00;
+  }
+
+  #yellow{
+    background-color: yellow;
+  }
+
+  #lime{
+    background-color: lime;
+  }
+
+  #blue{
+    background-color: blue;
+  }
+
+  #navy{
+    background-color:navy;
+  }
+
+  #magenta{
+    background-color: magenta;
+  }
+
+  #purple{
+    background-color: purple;
   }
   </style>
 </html>
