--- a/b-1f-jun-18.html
+++ b/b-1f-jun-18.html
@@ -8,7 +8,7 @@
     <h1>SonicScience - Biology</h1>
   <body>
     Question 1
-    <a href="#" id="red">1.1</a>
+    <a href="b-1f-jun-18-1.html" id="red">1.1</a>
     <a href="#" id="red">1.2</a>
     <a href="#" id="red">1.3</a>
     <a href="#" id="red">1.4</a>
@@ -30,74 +30,78 @@
     <br>
     <br>
     Question 3
-    <a href="#" id="yellow">2.1</a>
-    <a href="#" id="yellow">2.2</a>
-    <a href="#" id="yellow">2.3</a>
-    <a href="#" id="yellow">2.4</a>
-    <a href="#" id="yellow">2.5</a>
-    <a href="#" id="yellow">2.6</a>
-    <a href="#" id="yellow">2.7</a>
-    <a href="#" id="yellow">2.8</a>
+    <a href="#" id="yellow">3.1</a>
+    <a href="#" id="yellow">3.2</a>
+    <a href="#" id="yellow">3.3</a>
+    <a href="#" id="yellow">3.4</a>
+    <a href="#" id="yellow">3.5</a>
+    <a href="#" id="yellow">3.6</a>
+    <a href="#" id="yellow">3.7</a>
+    <a href="#" id="yellow">3.8</a>
     <br>
     <br>
     Question 4
-    <a href="#" id="lime">2.1</a>
-    <a href="#" id="lime">2.2</a>
-    <a href="#" id="lime">2.3</a>
-    <a href="#" id="lime">2.4</a>
-    <a href="#" id="lime">2.5</a>
-    <a href="#" id="lime">2.6</a>
-    <a href="#" id="lime">2.7</a>
-    <a href="#" id="lime">2.8</a>
+    <a href="#" id="lime">4.1</a>
+    <a href="#" id="lime">4.2</a>
+    <a href="#" id="lime">4.3</a>
+    <a href="#" id="lime">4.4</a>
+    <a href="#" id="lime">4.5</a>
+    <a href="#" id="lime">4.6</a>
+    <a href="#" id="lime">4.7</a>
+    <a href="#" id="lime">4.8</a>
     <br>
     <br>
     Question 5
-    <a href="#" id="blue">2.1</a>
-    <a href="#" id="blue">2.2</a>
-    <a href="#" id="blue">2.3</a>
-    <a href="#" id="blue">2.4</a>
-    <a href="#" id="blue">2.5</a>
-    <a href="#" id="blue">2.6</a>
-    <a href="#" id="blue">2.7</a>
-    <a href="#" id="blue">2.8</a>
+    <a href="#" id="blue">5.1</a>
+    <a href="#" id="blue">5.2</a>
+    <a href="#" id="blue">5.3</a>
+    <a href="#" id="blue">5.4</a>
+    <a href="#" id="blue">5.5</a>
+    <a href="#" id="blue">5.6</a>
+    <a href="#" id="blue">5.7</a>
+    <a href="#" id="blue">5.8</a>
     <br>
     <br>
     Question 6
-    <a href="#" id="navy">2.1</a>
-    <a href="#" id="navy">2.2</a>
-    <a href="#" id="navy">2.3</a>
-    <a href="#" id="navy">2.4</a>
-    <a href="#" id="navy">2.5</a>
-    <a href="#" id="navy">2.6</a>
-    <a href="#" id="navy">2.7</a>
-    <a href="#" id="navy">2.8</a>
+    <a href="#" id="navy">6.1</a>
+    <a href="#" id="navy">6.2</a>
+    <a href="#" id="navy">6.3</a>
+    <a href="#" id="navy">6.4</a>
+    <a href="#" id="navy">6.5</a>
+    <a href="#" id="navy">6.6</a>
+    <a href="#" id="navy">6.7</a>
+    <a href="#" id="navy">6.8</a>
     <br>
     <br>
     Question 7
-    <a href="#" id="magenta">2.1</a>
-    <a href="#" id="magenta">2.2</a>
-    <a href="#" id="magenta">2.3</a>
-    <a href="#" id="magenta">2.4</a>
-    <a href="#" id="magenta">2.5</a>
-    <a href="#" id="magenta">2.6</a>
-    <a href="#" id="magenta">2.7</a>
-    <a href="#" id="magenta">2.8</a>
-    <a href="#" id="magenta">2.9</a>
+    <a href="#" id="magenta">7.1</a>
+    <a href="#" id="magenta">7.2</a>
+    <a href="#" id="magenta">7.3</a>
+    <a href="#" id="magenta">7.4</a>
+    <a href="#" id="magenta">7.5</a>
+    <a href="#" id="magenta">7.6</a>
+    <a href="#" id="magenta">7.7</a>
+    <a href="#" id="magenta">7.8</a>
+    <a href="#" id="magenta">7.9</a>
     <br>
     <br>
     Question 8
-    <a href="#" id="purple">2.1</a>
-    <a href="#" id="purple">2.2</a>
-    <a href="#" id="purple">2.3</a>
-    <a href="#" id="purple">2.4</a>
-    <a href="#" id="purple">2.5</a>
-    <a href="#" id="purple">2.6</a>
-    <a href="#" id="purple">2.7</a>
+    <a href="#" id="purple">8.1</a>
+    <a href="#" id="purple">8.2</a>
+    <a href="#" id="purple">8.3</a>
+    <a href="#" id="purple">8.4</a>
+    <a href="#" id="purple">8.5</a>
+    <a href="#" id="purple">8.6</a>
+    <a href="#" id="purple">8.7</a>
     <br>
     <br>
     <footer>Biology Foundation Paper 1 June 2018</footer>
   </body>
   <style>
+  footer{
+  font-size: 18px;
+  }
+
   * {
     font-family: Arial;
     font-size: 24px;
@@ -137,27 +141,27 @@
   }
 
   #yellow{
-    background-color: yellow;
+    background-color: #ffff33;
   }
 
   #lime{
-    background-color: lime;
+    background-color: #33ff33;
   }
 
   #blue{
-    background-color: blue;
+    background-color: #4db8ff;
   }
 
   #navy{
-    background-color:navy;
+    background-color: #3333ff;
   }
 
   #magenta{
-    background-color: magenta;
+    background-color: #ff33ff;
   }
 
   #purple{
-    background-color: purple;
+    background-color: #99004d;
   }
   </style>
 </html>
