--- a/b-1f-jun-18.html
+++ b/b-1f-jun-18.html
@@ -5,11 +5,11 @@
     <title>SonicScience</title>
   </head>
   <body>
-    <h1>SonicScience - Biology</h1>
+    <h1><a href="index.html">SonicScience - Biology</a></h1>
   <body>
-    Question 1
-    <a href="b-1f-jun-18-1.html" id="red">1.1</a>
-    <a href="#" id="red">1.2</a>
+    <div id="box">
+    <a href="b-1f-jun-18-1-1.html" id="red">1.1</a>
+    <a href="b-1f-jun-18-1-2.html" id="red">1.2</a>
     <a href="#" id="red">1.3</a>
     <a href="#" id="red">1.4</a>
     <a href="#" id="red">1.5</a>
@@ -18,7 +18,6 @@
     <a href="#" id="red">1.8</a>
     <br>
     <br>
-    Question 2
     <a href="#" id="orange">2.1</a>
     <a href="#" id="orange">2.2</a>
     <a href="#" id="orange">2.3</a>
@@ -29,7 +28,6 @@
     <a href="#" id="orange">2.8</a>
     <br>
     <br>
-    Question 3
     <a href="#" id="yellow">3.1</a>
     <a href="#" id="yellow">3.2</a>
     <a href="#" id="yellow">3.3</a>
@@ -40,7 +38,6 @@
     <a href="#" id="yellow">3.8</a>
     <br>
     <br>
-    Question 4
     <a href="#" id="lime">4.1</a>
     <a href="#" id="lime">4.2</a>
     <a href="#" id="lime">4.3</a>
@@ -51,7 +48,6 @@
     <a href="#" id="lime">4.8</a>
     <br>
     <br>
-    Question 5
     <a href="#" id="blue">5.1</a>
     <a href="#" id="blue">5.2</a>
     <a href="#" id="blue">5.3</a>
@@ -62,7 +58,6 @@
     <a href="#" id="blue">5.8</a>
     <br>
     <br>
-    Question 6
     <a href="#" id="navy">6.1</a>
     <a href="#" id="navy">6.2</a>
     <a href="#" id="navy">6.3</a>
@@ -73,7 +68,6 @@
     <a href="#" id="navy">6.8</a>
     <br>
     <br>
-    Question 7
     <a href="#" id="magenta">7.1</a>
     <a href="#" id="magenta">7.2</a>
     <a href="#" id="magenta">7.3</a>
@@ -85,7 +79,6 @@
     <a href="#" id="magenta">7.9</a>
     <br>
     <br>
-    Question 8
     <a href="#" id="purple">8.1</a>
     <a href="#" id="purple">8.2</a>
     <a href="#" id="purple">8.3</a>
@@ -93,8 +86,7 @@
     <a href="#" id="purple">8.5</a>
     <a href="#" id="purple">8.6</a>
     <a href="#" id="purple">8.7</a>
-    <br>
-    <br>
+  </div>
     <footer>Biology Foundation Paper 1 June 2018</footer>
   </body>
   <style>
@@ -105,9 +97,10 @@
   * {
     font-family: Arial;
     font-size: 24px;
+    color:white;
   }
 
-  h1{
+  h1 a {
     font-size: 36px;
     color: #00e600;
     margin-left: 20px;
@@ -117,8 +110,6 @@
     padding: 15px;
     background-color: #DEDEDE;
     border-radius: 2.5px;
-    border-left-style:solid;
-    border-color:grey;
     border-width: 10px;
   }
 
@@ -162,6 +153,13 @@
 
   #purple{
     background-color: #99004d;
+  }
+
+  footer{
+  font-size: 18px;
+  background-color: grey;
+  padding:10px;
+  color:white;
   }
   </style>
 </html>
