--- a/b-1h-jun-18.html
+++ b/b-1h-jun-18.html
@@ -5,7 +5,7 @@
     <title>SonicScience</title>
   </head>
   <body>
-    <h1>SonicScience - Biology</h1>
+    <h1><a href="index.html">SonicScience - Biology</a></h1>
   <body>
     <footer>Biology Higher Paper 1 June 2018</footer>
   </body>
@@ -15,7 +15,7 @@
     font-size: 24px;
   }
 
-  h1{
+  h1 a{
     font-size: 36px;
     color: #00e600;
     margin-left: 20px;
@@ -30,7 +30,7 @@
     border-width: 10px;
   }
 
-  button{
+  a {
     border:none;
     text-decoration: none;
     padding:12.5px;
