--- a/b-1f-jun-18.html
+++ b/b-1f-jun-18.html
@@ -8,8 +8,8 @@
     <h1><a href="index.html">SonicScience - Biology</a></h1>
   <body>
     <div id="box">
-    <a href="b-1f-jun-18-1-1.html" id="red">1.1</a>
-    <a href="b-1f-jun-18-1-2.html" id="red">1.2</a>
+    <a href="b-1f-jun-18-1.html" id="red">1.1</a>
+    <a href="b-1f-jun-18-1.html" id="red">1.2</a>
     <a href="#" id="red">1.3</a>
     <a href="#" id="red">1.4</a>
     <a href="#" id="red">1.5</a>
