--- a/b-1f-jun-18.html
+++ b/b-1f-jun-18.html
@@ -4,18 +4,18 @@
     <meta charset="utf-8">
     <title>SonicScience</title>
   </head>
-  <body>
+  <body onload="getPreviousAnswers()">
     <h1><a href="index.html">SonicScience - Biology</a></h1>
   <body>
     <div id="box">
-    <a href="b-1f-jun-18-1.html" id="red">1.1</a>
-    <a href="b-1f-jun-18-1.html" id="red">1.2</a>
-    <a href="#" id="red">1.3</a>
-    <a href="#" id="red">1.4</a>
-    <a href="#" id="red">1.5</a>
-    <a href="#" id="red">1.6</a>
-    <a href="#" id="red">1.7</a>
-    <a href="#" id="red">1.8</a>
+    <a style="background-color: #b30000;" href="b-1f-jun-18-1.html" id="1-1">1.1</a>
+    <a style="background-color: #b30000;" href="b-1f-jun-18-1.html" id="1-2">1.2</a>
+    <a style="background-color: #b30000;" href="b-1f-jun-18-1.html" id="1-3">1.3</a>
+    <a style="background-color: #b30000;" href="b-1f-jun-18-1.html" id="1-4">1.4</a>
+    <a style="background-color: #b30000;" href="b-1f-jun-18-1.html" id="1-5">1.5</a>
+    <a style="background-color: #b30000;" href="b-1f-jun-18-1.html" id="1-6">1.6</a>
+    <a style="background-color: #b30000;" href="b-1f-jun-18-1.html" id="1-7">1.7</a>
+    <a style="background-color: #b30000;" href="b-1f-jun-18-1.html" id="1-8">1.8</a>
     <br>
     <br>
     <a href="#" id="orange">2.1</a>
@@ -89,6 +89,15 @@
   </div>
     <footer>Biology Foundation Paper 1 June 2018</footer>
   </body>
+  <script>
+  function getPreviousAnswers(){
+    for (var i = 0; i < 9; i++) {
+      if (localStorage.getItem("b-1f-jun-18-1-" + i) == "correct"){
+        document.getElementById('1-' + i).style.backgroundColor = "#99ff99";
+      }
+    }
+  }
+  </script>
   <style>
   footer{
   font-size: 18px;
@@ -121,10 +130,6 @@
     text-align: center;
     border-radius: 10px;
     font-size:16px;
-  }
-
-  #red{
-    background-color: #b30000;
   }
 
   #orange{
