--- a/b-1h-jun-18.html
+++ b/b-1h-jun-18.html
@@ -10,6 +10,13 @@
     <footer>Biology Higher Paper 1 June 2018</footer>
   </body>
   <style>
+  footer{
+  font-size: 18px;
+  background-color: grey;
+  padding:10px;
+  color:white;
+  }
+
   * {
     font-family: Arial;
     font-size: 24px;
